# testBench

./: .dockerignore  .env.example  .gitignore  .mcp.json  DEPLOY.md  Dockerfile  Makefile  docker-compose.yml  project-context.md  pyproject.toml  tea-cases.json
backend/: .env.example  .gitignore  playwright-mcp-config.json  pyproject.toml  seed.py  swagger-change-password.yaml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  0d9965cdc22a_add_projects_branches_project_members_.py  1599cd20904e_add_documents_table.py  1a31bf3cf6fb_add_language_to_documents.py  1cad598605a8_add_assigned_project_ids_to_ai_provider_.py  266911e11ea3_add_screenshots_to_script_runs.py  4bea211d2502_add_script_runs_table.py  59ee2400111b_add_case_file_and_usage_tables.py  7a8b9c0d1e2f_add_edited_after_generate.py  7d4830d9988b_add_execution_log_to_test_report_.py  8039326e77ed_make_git_url_and_script_base_path_.py  81d9006463fa_add_llm_mock_tables.py  8c9d0e1f2a3b_add_report_type.py  93b33cf37280_merge_heads_scenario_gen_mcp_keys_pg_.py  93ebaae5883d_add_exploratory_tables.py  9d0e1f2a3b4c_add_project_id_to_reports.py  9f8e7d6c5b4a_add_scenario_variables.py  a1b2c3d4e5f6_add_audit_logs_table.py  a1c2d3e4f5g6_add_api_scenario_ui_scenario.py  a2b3c4d5e6f7_add_api_nodes_table.py  a2f4c8d91e00_add_gen_config_to_documents.py  a3f1c8e72b4d_add_custom_mock_presets.py  a3f7c1d95e2b_scenario_gen_tables.py  a8b9c0d1e2f3_api_scenario_source_case.py  (+33 more)
backend/app/: config.py  main.py
backend/testbench_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+471 files in other folders)
