[project]
name = "testbench-backend"
version = "0.1.0"
description = "测试管理平台后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "joserfc>=1.0",
    "bcrypt>=4.0,<4.1",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "filelock>=3.13",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
]
